# omegahPetsc

./: CMakeLists.txt  README.md  ex12.cpp  ex50.cpp  markMdlBdry.cpp
23elmMesh/: simMesh_result.sms  simModel_result.smd
23elmMesh/23elm_bfs_bfs_1.ppm/: 0.osh  23elm_bfs_bfs_0.ppm
23elmMesh/23elm_bfs_bfs_1.ppm/23elm_bfs_bfs_0.osh/: 0.osh
23elmMesh/23elm_bfs_bfs_2.ppm/: 23elm_bfs_bfs_0.ppm  23elm_bfs_bfs_1.ppm
23elmMesh/23elm_bfs_bfs_2.ppm/23elm_bfs_bfs_1.osh/: 0.osh
23elmMesh/mesh.osh/: 0.osh
24k.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/: 24k_bfs_bfs_0.ppm  24k_bfs_bfs_1.ppm  24k_bfs_bfs_10.ppm  24k_bfs_bfs_11.ppm  24k_bfs_bfs_12.ppm  24k_bfs_bfs_13.ppm  24k_bfs_bfs_14.ppm  24k_bfs_bfs_15.ppm  24k_bfs_bfs_16.ppm  24k_bfs_bfs_17.ppm  24k_bfs_bfs_18.ppm  24k_bfs_bfs_19.ppm  24k_bfs_bfs_2.ppm  24k_bfs_bfs_20.ppm  24k_bfs_bfs_21.ppm  24k_bfs_bfs_22.ppm  24k_bfs_bfs_23.ppm  24k_bfs_bfs_3.ppm  24k_bfs_bfs_4.ppm  24k_bfs_bfs_5.ppm  24k_bfs_bfs_6.ppm  24k_bfs_bfs_7.ppm  24k_bfs_bfs_8.ppm  24k_bfs_bfs_9.ppm
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_0.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_1.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_10.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_11.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_12.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_13.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_14.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_15.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_16.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_17.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_18.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_19.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_2.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_20.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_21.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_22.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_23.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_3.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_4.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_5.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_6.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_7.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_8.osh/: 0.osh
xgc-picparts/24k/24k_bfs_bfs_24.ppm/24k_bfs_bfs_9.osh/: 0.osh
xgc-picparts/24k/24k_full_bfs_4.ppm/: 24k_full_bfs_0.ppm  24k_full_bfs_1.ppm  24k_full_bfs_2.ppm  24k_full_bfs_3.ppm
xgc-picparts/24k/24k_full_bfs_4.ppm/24k_full_bfs_0.osh/: 0.osh
xgc-picparts/24k/24k_full_bfs_4.ppm/24k_full_bfs_1.osh/: 0.osh
xgc-picparts/24k/24k_full_bfs_4.ppm/24k_full_bfs_2.osh/: 0.osh
xgc-picparts/24k/24k_full_bfs_4.ppm/24k_full_bfs_3.osh/: 0.osh
xgc-picparts/24k/24p/: picpart0.vtu  picpart1.vtu  picpart10.vtu  picpart11.vtu  picpart12.vtu  picpart13.vtu  picpart14.vtu  picpart15.vtu  picpart16.vtu  picpart17.vtu  picpart18.vtu  picpart19.vtu  picpart2.vtu  picpart20.vtu  picpart21.vtu  picpart22.vtu  picpart23.vtu  picpart3.vtu  picpart4.vtu  picpart5.vtu  picpart6.vtu  picpart7.vtu  picpart8.vtu  picpart9.vtu
xgc-picparts/24k/24p/picpart0.osh/: 0.osh
xgc-picparts/24k/24p/picpart1.osh/: 0.osh
xgc-picparts/24k/24p/picpart10.osh/: 0.osh
xgc-picparts/24k/24p/picpart11.osh/: 0.osh
xgc-picparts/24k/24p/picpart12.osh/: 0.osh
xgc-picparts/24k/24p/picpart13.osh/: 0.osh
xgc-picparts/24k/24p/picpart14.osh/: 0.osh
xgc-picparts/24k/24p/picpart15.osh/: 0.osh
xgc-picparts/24k/24p/picpart16.osh/: 0.osh
xgc-picparts/24k/24p/picpart17.osh/: 0.osh
xgc-picparts/24k/24p/picpart18.osh/: 0.osh
xgc-picparts/24k/24p/picpart19.osh/: 0.osh
xgc-picparts/24k/24p/picpart2.osh/: 0.osh
xgc-picparts/24k/24p/picpart20.osh/: 0.osh
xgc-picparts/24k/24p/picpart21.osh/: 0.osh
xgc-picparts/24k/24p/picpart22.osh/: 0.osh
xgc-picparts/24k/24p/picpart23.osh/: 0.osh
xgc-picparts/24k/24p/picpart3.osh/: 0.osh
xgc-picparts/24k/24p/picpart4.osh/: 0.osh
xgc-picparts/24k/24p/picpart5.osh/: 0.osh
xgc-picparts/24k/24p/picpart6.osh/: 0.osh
xgc-picparts/24k/24p/picpart7.osh/: 0.osh
xgc-picparts/24k/24p/picpart8.osh/: 0.osh
xgc-picparts/24k/24p/picpart9.osh/: 0.osh
xgc-picparts/24k/4p/: picpart0.vtu  picpart1.vtu  picpart2.vtu  picpart3.vtu
xgc-picparts/24k/4p/picpart0.osh/: 0.osh
xgc-picparts/24k/4p/picpart1.osh/: 0.osh
xgc-picparts/24k/4p/picpart2.osh/: 0.osh
xgc-picparts/24k/4p/picpart3.osh/: 0.osh
